Change user for email in verification and field

--- a/Views/login.html
+++ b/Views/login.html
@@ -3,7 +3,7 @@
 
 <head id="Security">
     <title>Log in</title>
-    <link rel="stylesheet" href="../resources/login.css" />
+    <link rel="stylesheet" href="../resources/css/login.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
 
 </head>
@@ -12,14 +12,15 @@
     <h1>Log in</h1>
     <div>
         <form id="infouser" action="mainPage.html">
-            <p> Username: </p>
-            <input type="text" id="user" name="user" />
+            <p> Email: </p>
+            <input type="text" id="email" name="email" />
             <br />
             <p> Password: </p>
             <input type="text" id="pwd" name="pwd" />
             <br />
+            <br />
             <button type="submit" name="LOGIN">LOGIN</button>
-            <p id = "error"></p>
+            <p id = "error" class="error"></p>
         </form>
     </div>
 
