Added sessions and save email, pwd and name on login

--- a/Views/login.html
+++ b/Views/login.html
@@ -35,7 +35,7 @@
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     //var karen = JSON.parse(this.responseText);
-                    document.getElementById("Security").innerHTML = '<meta http-equiv="refresh" content="0; URL=mainPage.html" />';
+                    document.getElementById("Security").innerHTML = '<meta http-equiv="refresh" content="0; URL=mainPage.php" />';
                 }
                 else if (this.readyState == 4 && this.status == 404) {
                     //var karen = JSON.parse(this.responseText);
