Create side bar in mainPage and log out from session

--- a/Resources/css/login.css
+++ b/Resources/css/login.css
@@ -31,8 +31,8 @@ body{
     text-align: center;
     font-weight: bold;
     font-family:"Poppins";
-    color: midnightblue;
-    background-color:#090752;
+    color: #11101d;
+    background-color:#11101d;
 }
 div{
     background-color: white;
