--- a/Views/login.html
+++ b/Views/login.html
@@ -3,7 +3,7 @@
 
 <head id="Security">
     <title>Log in</title>
-    <link rel="stylesheet" href="../resources/css/login.css" />
+    <link rel="stylesheet" href="../Resources/css/login.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
 
 </head>
