--- a/Views/Register.html
+++ b/Views/Register.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Register</title>
-    <link rel="stylesheet" href="../resources/css/login.css" />
+    <link rel="stylesheet" href="../Resources/css/login.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
 
 </head>
