--- a/Views/Register.html
+++ b/Views/Register.html
@@ -29,6 +29,12 @@
             <button type="submit" name="Register">REGISTER</button>
 
         </form>
+        <br />
+        <p class="text"> Already have an account? 
+            <a href="login.html">
+                Log In
+            </a> 
+        </p>
     </div>
     <script>
         function showHint(str) {
