--- a/Views/login.html
+++ b/Views/login.html
@@ -17,10 +17,16 @@
             <p> Password: </p>
             <input type="password" id="pwd" name="pwd" />
             <br />
-            <br />
-            <button type="submit" name="LOGIN">LOGIN</button>
             <p id = "error" class="error"></p>
+            <button type="submit" name="LOGIN">LOGIN</button>
         </form>
+        <br />
+        <p class="text">Don't have an account yet? 
+            <a href="Register.html">
+                Register
+            </a> 
+        </p>
+        
     </div>
 
     <script>
