--- a/Views/Register.html
+++ b/Views/Register.html
@@ -22,7 +22,7 @@
             <input type="text" id="sp" name="sp" />
             <br />
             <p> Password: </p>
-            <input type="text" id="pwd" name="pwd" onkeyup="showHint(this.value)" />
+            <input type="password" id="pwd" name="pwd" onkeyup="showHint(this.value)" />
             <br />
             <span id="Security"></span>
             <br />
