--- a/Resources/css/carousel.css
+++ b/Resources/css/carousel.css
@@ -12,25 +12,25 @@
 
 .wrapper .semester{
     min-width: 200px;
-    height: 455px;
+    max-height: 90%;
     background-color: #ddd;
     margin-right: 2px;
     padding: 0px;
 }
 
 .wrapper .semester .course{
-    height: 60px;
-    line-height: 60px;
+    height: 65px;
     width: 100%;
-    background-color: pink;
+    background-color: #8F95D3;
     margin-bottom: 5px;
     text-align: center;
+    
+    line-height: 15px;
 }
 
 .courseName{
+    font-size:12px;
     text-align: center;
-    height:100%;
-    width: 100%;
     margin-top: 0px;
-    
+    margin-bottom: 2px;
 }
