--- a/Resources/css/carousel.css
+++ b/Resources/css/carousel.css
@@ -19,10 +19,11 @@
 }
 
 .wrapper .semester .course{
-    height: 65px;
+    height: 68px;
     width: 100%;
     background-color: #8F95D3;
     margin-bottom: 5px;
+    padding-top:5px;
     text-align: center;
     
     line-height: 15px;
@@ -31,7 +32,7 @@
 .courseName{
     font-size:12px;
     text-align: center;
-    margin-top: 0px;
+    margin-top: 3px;
     margin-bottom: 2px;
 }
 
@@ -41,3 +42,12 @@
     background-color: rgb(138, 138, 138);
     margin-bottom: 5px;
 }
+
+ a, a:hover, a:focus, a:active {
+      text-decoration: none;
+      color: inherit;
+ }
+
+ .card_link{
+    margin-bottom: 10px;
+ }
